# absurdle-c

./: CMakeLists.txt  README.md  config.h  config.h.in
.github/: FUNDING.yml
include/: game.h  screen.h
lists/: answers
packs/arch/: PKGBUILD
src/: game.c  main.c  screen.c
